@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/Unix-Syslog
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Unix-Syslog/ChangeLog,v 1.21 2011/09/04 11:21:27 tove Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Unix-Syslog/ChangeLog,v 1.22 2012/02/24 10:43:26 ago Exp $
+
+  24 Feb 2012; Agostino Sarubbo <ago@gentoo.org> Unix-Syslog-1.100.0.ebuild:
+  Stable for amd64, wrt bug #400257
 
   04 Sep 2011; Torsten Veller <tove@gentoo.org> -Unix-Syslog-1.1.ebuild:
   Cleanup
